# tellsticknet

./: .dockerignore  .gitignore  .travis.yml  AGENTS.md  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  tasks-archive.md  tasks.md  tox.ini
.opencode/commands/: current.md  jjdesc.md  task-add.md  task-archive.md  task-finish.md  task-pause.md  task-start.md  tasks.md
docs/: README-TASKS.md
script/: discover  dump  lint  listen  parse  test
tellsticknet/: __main__.py  controller.py  discovery.py  mqtt.py  protocol.py  test_protocols.py
tellsticknet/protocols/: arctech.py  oregon.py
