[build-system]
requires = ["uv_build>=0.11.24,<0.12"]
build-backend = "uv_build"

[project]
name = "tellsticknet"
version = "0.1.2"
description = "Listen for UDP sensor broadcasts from a Tellstick"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "?" }
authors = [
    { name = "Erik Eriksson", email = "error.errorsson@gmail.com" },
]
keywords = ["tellstick"]
dependencies = [
    "pyyaml>=6.0",
    "gmqtt",
    "coloredlogs",
]

[project.scripts]
tellsticknet = "tellsticknet.__main__:app_main"

[dependency-groups]
lint = ["ruff"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "UP"]

[tool.ruff.format]
quote-style = "preserve"

[tool.uv.build-backend]
module-name = "tellsticknet"
module-root = ""